<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_roll"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/button_mod"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_d20"
        app:layout_constraintTop_toBottomOf="@+id/button_d12" />

    <Button
        android:id="@+id/button_d4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/background_light"
        android:onClick="changeDieType"
        android:text="@string/button_d4"
        app:layout_constraintEnd_toStartOf="@+id/button_d6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_d6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/background_light"
        android:onClick="changeDieType"
        android:text="@string/button_d6"
        app:layout_constraintEnd_toStartOf="@+id/button_d8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_d4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_d8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/background_light"
        android:onClick="changeDieType"
        android:text="@string/button_d8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_d6"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2_d10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_light"
        android:onClick="changeDieType"
        android:text="@string/button_d100"
        app:layout_constraintEnd_toStartOf="@+id/button_d12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_d10"
        app:layout_constraintTop_toBottomOf="@+id/button_d6" />

    <Button
        android:id="@+id/button_d12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/background_light"
        android:onClick="changeDieType"
        android:text="@string/button_d12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2_d10"
        app:layout_constraintTop_toBottomOf="@+id/button_d8" />

    <Button
        android:id="@+id/button_undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/button_undo"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/button_d20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_d10" />

    <Button
        android:id="@+id/button_d20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_light"
        android:onClick="changeDieType"
        android:text="@string/button_d20"
        app:layout_constraintEnd_toStartOf="@+id/button_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_undo"
        app:layout_constraintTop_toBottomOf="@+id/button2_d10" />

    <Button
        android:id="@+id/button_d10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_light"
        android:onClick="changeDieType"
        android:text="@string/button_d10"
        app:layout_constraintEnd_toStartOf="@+id/button2_d10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_d4" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_nav_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_nav_middle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Roller" />

            <Button
                android:id="@+id/button_nav_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toLists"
                android:text="Lists" />

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/textView_currentRoll"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="Roll"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_roll"
        app:layout_constraintTop_toBottomOf="@+id/button_d20" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="377dp"
        android:layout_height="232dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow
            android:id="@+id/TableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <CheckBox
                android:id="@+id/checkBox_selected1"
                android:layout_width="wrap_content"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/textView_rowName1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/textView_rowName1"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView_rollFormula1"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView_rollValue1"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:text="@string/textView_rollValue1"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown" />

        </TableRow>

        <TableRow
            android:id="@+id/TableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox_selected2"
                android:layout_width="35dp"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/textView_rowName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_rowName2"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView_rollFormula2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView_rollValue2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_rollValue2"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox_selected3"
                android:layout_width="35dp"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/textView_rowName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_rowName3"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView_rollFormula3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView_rollValue3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_rollValue3"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox_selected4"
                android:layout_width="35dp"
                android:layout_height="55dp" />

            <TextView
                android:id="@+id/textView_rowName4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_rowName4"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView_rollFormula4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView_rollValue4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_rollValue4"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/textView_favorites"
        android:textAllCaps="false"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="roll formula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_currentRoll" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="History:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_undo" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:background="#C5C5C5"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toStartOf="@+id/textView_currentRoll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>